<resources>
    <string name="app_name" translatable="false">Social</string>

    <!-- Miscellaneous Strings -->
    <string name="dialog" translatable="false">dialog</string>
    <string name="auto_fill_key_name" translatable="false">name</string>
    <string name="auto_fill_key_password" translatable="false">password</string>
    <string name="auto_fill_key_phone" translatable="false">phone</string>
    <string name="auto_fill_key_dob" translatable="false">dob</string>
    <string name="firestore_conversation_key" translatable="false">conversations</string>
    <string name="date_picker">Date Picker</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="retrofit_failure">There might be some problem please try again later.</string>
    <string name="hint_search">Search…</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="storage_permission_needed">You need to grant read/write external         storage permission in order to access media.</string>
    <string name="camera_permission_needed">You need to allow camera permission
        in order to capture photos.</string>
    <string name="contacts_permission_needed">You need to grant read contacts permission in order to Sync all your contacts.</string>
    <string name="record_audio_permission_needed">You need to allow record audio permission
        in order to record dialogs.</string>
    <string name="enable_storage_permission">You should enable your storage permission         in the settings for better experience.</string>
    <string name="enable_read_contacts_permission">You should enable your read contacts permission         in the settings for better experience.</string>
    <string name="no_more_data">No more data found.</string>
    <string name="location_permission_needed">You need to grant location permission in order to get your present location</string>
    <string name="launch_activity" translatable="false">Launch Activity</string>
    <string name="take_video">Take Video</string>
    <string name="take_still_photo">Take Photo</string>
    <string name="open_image_gallery">Image Gallery</string>
    <string name="open_video_gallery">Video Gallery</string>

    <!--country code dialog fragment-->
    <string name="select_country_code">Code</string>
    <string name="select_country">Country</string>
    <string name="fragment_title_country_code">Select Country Code</string>
    <string name="empty_country_code">Please Select country code.</string>
    <string name="empty_phone_no">Please enter your phone number.</string>
    <string name="empty_otp">Please enter OTP code.</string>

    <!--Change password dialogFragment-->
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="empty_old_password">Please enter your old password.</string>
    <string name="empty_new_password">Please enter your new password.</string>
    <string name="invalid_new_password">Your new password should contain 6–15 characters.</string>
    <string name="password_not_matched">Your password didn\'t match.</string>
    <string name="add">Add</string>
    <string name="search">Search</string>

    <!--practice fragments-->

    <string name="welcome_to_social">Welcome to Social</string>
    <string name="far">Far far away , behind the word mountains, far from the countries Vokalia and Consonantia.</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="loginpg">LOGIN</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="india">INDIA</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="next">NEXt</string>
    <string name="upload">Upload image</string>
    <string name="reset_password">Reset Password</string>
    <string name="txtmasg">A text message with a verification code was just sent to ( *******96 )</string>
    <string name="choosecommunity">Choose a Community to start with. You can subscribe to more under your settings.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equipment">Equipment\n(Sale/Rent)</string>
    <string name="technicaljobes">Technical\nJobes</string>
    <string name="crowd_funding">Crowd Funding\nCampaigns</string>
    <string name="chooseregion">You can pick one region for free to start with. You can change the region at any time from the settings.</string>
    <string name="welcometoCwrnch">Welcome to C-WRNCH app, you can start by setting up your profile and joining a channel.</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verify">VERIFY</string>
    <string name="didn_t_get_a_code">Didn’t get a code?</string>
    <string name="continu">Continue</string>
    <string name="continu1">Continue</string>
    <string name="welcome">Welcome</string>
    <string name="continu3">continue</string>
    <string name="user">1.269 Users</string>
    <string name="type_group_subject_here">Type group subject here</string>
    <string name="maryland">Maryland</string>
    <string name="hello">hello</string>
    <string name="sub">sub</string>
    <string name="reply">Reply</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="display_name">Display Name</string>
    <string name="josie_diana">Josie Diana</string>
    <string name="account_settings">Account Settings</string>
    <string name="mysubsci">My Subscriptions</string>
    <string name="my_friends">My Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">LOGOUT</string>


</resources>
