<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/socialpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivSocail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/welcomeTxtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:text="@string/welcome_to_social"
        android:textAlignment="center"
        android:textColor="@color/social"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSocail"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/farawaytxtTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/far"
        android:textAlignment="center"
        android:textColor="@color/farcolor"
        android:textSize="14sp"
        android:ems="16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTxtV"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/loginbtn"
        style="@style/StyleSubmitButton"
        android:background="@drawable/rounded"
        android:text="@string/login"
        android:textSize="14sp"
        android:textColor="@color/whitecolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/farawaytxtTv"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.83" />

    <Button
        android:id="@+id/signupbtn1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbtn2"
        android:text="@string/signup"
        android:textColor="@color/whitecolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginbtn"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent="0.83" />


</androidx.constraintlayout.widget.ConstraintLayout>


