<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusable="true"
    tools:context=".views.fragments.VerificationFragment">

    <include layout="@layout/toolbar" />


    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_verification_code"
        android:textColor="#4C5B5C"
        android:textSize="23sp"
        style="@style/StyleSemiBold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        style="@style/StyleRegular"
        android:text="@string/txtmasg"
        android:textAlignment="center"
        android:textColor="#7D7D7E"
        app:layout_constraintBottom_toTopOf="@id/verifybtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/verifybtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:text="@string/verify"
        android:textColor="@color/whitecolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67"
        app:layout_constraintWidth_percent="0.83" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StyleSemiBold"
        android:text="@string/didn_t_get_a_code"
        android:textColor="#4A4A4A"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/verifybtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <com.chaos.view.PinView
        android:id="@+id/pinview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:inputType="number"
        android:itemBackground="#FAFAFA"
        android:textColor="@color/tint"
        app:cursorColor="@color/tint"
        app:hideLineWhenFilled="false"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:lineColor="@color/tint"
        app:viewType="line" />
</androidx.constraintlayout.widget.ConstraintLayout>