<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/whitecolor"
    android:focusable="true"
    android:clickable="true"
    tools:context=".views.fragments.ProfileFragment">

    <include layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_avatar"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"/>
    <TextView
        android:id="@+id/txtvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/josie_diana"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        android:layout_marginTop="16dp"
        android:textColor="@color/tint"
        android:drawableEnd="@drawable/ic_edit"
        android:drawablePadding="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/ivProfile"
        style="@style/StyleSemiBold"/>
    <TextView
        android:id="@+id/txtvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        android:text="@string/account_settings"
        app:layout_constraintTop_toBottomOf="@id/txtvName"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.1"
        style="@style/StyleSemiBold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#086788"/>
    <TextView
        android:id="@+id/txtvSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtvAccount"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.08"
        android:text="@string/mysubsci"
        android:textColor="@color/logincolor"
        style="@style/StyleSemiBold"
        android:textSize="16sp"
        android:ems="17"
        android:drawableStart="@drawable/ic_subscriptions"
        android:drawablePadding="10dp"
        android:drawableEnd="@drawable/ic_arow"/>
    <view
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#D9D9D9"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/txtvSubscribe"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        android:layout_marginTop="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        android:text="@string/my_friends"
        android:textSize="16sp"
        android:textColor="@color/logincolor"
        style="@style/StyleSemiBold"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableStart="@drawable/ic_myfriend"
        android:drawableEnd="@drawable/ic_arow"
        android:drawablePadding="10dp"
        android:ems="17"/>
    <view
        android:layout_width="0dp"
        android:layout_height="1dp"









</androidx.constraintlayout.widget.ConstraintLayout>