<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitecolor"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusable="true">


 <include layout="@layout/toolbar" />


 <TextView
     android:id="@+id/textView10"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/mobile_number"
     android:textColor="@color/mobilenocolor"
     android:textSize="16sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@+id/guideline7"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="@+id/guideline2"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.136" />

 <com.hbb20.CountryCodePicker
     android:id="@+id/countryCodePicker"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:ccp_clickable="true"
     app:ccp_defaultLanguage="ENGLISH"
     app:ccp_defaultNameCode="@string/india"
     app:ccp_textSize="13sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@+id/guideline7"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="@+id/guideline2"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.209" />

 <EditText
     android:id="@+id/editText3"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:ems="10"
     android:inputType="number"
     android:textColor="@color/tint"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@+id/guideline7"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toEndOf="@+id/countryCodePicker"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.212" />

 <Button
     android:id="@+id/button3"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:background="@drawable/rounded"
     android:text="@string/next"
     android:textColor="@color/whitecolor"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@+id/guideline7"
     app:layout_constraintStart_toStartOf="@+id/guideline2"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.576" />

 <androidx.constraintlayout.widget.Guideline
     android:id="@+id/guideline2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:layout_constraintGuide_begin="29dp" />

 <androidx.constraintlayout.widget.Guideline
     android:id="@+id/guideline7"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:layout_constraintGuide_percent="0.93" />
</androidx.constraintlayout.widget.ConstraintLayout>
